fix(search-result): adjust z-index bg

--- a/src/assets/scss/searchpage.scss
+++ b/src/assets/scss/searchpage.scss
@@ -4,5 +4,6 @@
         position: fixed;
         bottom: 0;
         left: 0;
+        z-index: -1;
     }
 }
